Polish arena administration commands and diagnostics